# shopify-client

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
shopify_client/: __init__.py  builder.py  client.py  constants.py  deferrer.py  exceptions.py  models.py  options.py  store.py  types.py  utils.py
shopify_client/gql/: current_bulkoperation.gql  mutation_bulkoperation.gql  mutation_upload_bulkoperation.gql  query_bulkoperation.gql  webhooks_list.gql  webhooks_subscribe.gql
tests/: conftest.py  test_builder.py  test_client.py  test_client_common.py  test_client_graphql.py  test_client_limits.py  test_examples.py  test_options.py  test_utils.py  utils.py
tests/fixtures/: bulk_job_completed.json  bulk_job_running.json  bulk_operation_run_mutation.json  bulk_submit_query.json  create_and_submit_mutation.json  get_decode_error.json  get_errors.json  product.json  products.jsonl  redirect_import_create.json  redirect_import_submit.json  shopify_queries.json  staged_upload_create.json
tests/fixtures/metafield/: create.json  delete.json  list.json
tests/fixtures/subscription/: check_subscription.json
tests/fixtures/webhook_subscription/: delete.json  list.json
